Se crearon formularios

--- a/edificio/templates/edificio/inquilino.html
+++ b/edificio/templates/edificio/inquilino.html
@@ -1,5 +1,18 @@
 {% extends 'index/index.html' %}
 
+
+{% block 'header_block' %}
+{% endblock 'header_block' %}
+
+
 {% block 'body_block' %}
-<h1>Inquilino</h1>
+
+    <form action="" method="post">
+        {% csrf_token %}
+        <table>
+            {{form.as_table}}
+        </table>
+        <button>Crear</button>
+    </form>
+
 {% endblock 'body_block' %}
