--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -28,19 +28,21 @@
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="masthead">
-            <div class="container position-relative">
-                <div class="row justify-content-center">
-                    <div class="col-xl-6">
-                        <div class="text-center text-white">
-                            <!-- Page heading-->
-                            <h1 class="mb-5">Generate more leads with a professional landing page!</h1>
+        {% block 'header_block' %}
+            <header class="masthead">
+                <div class="container position-relative">
+                    <div class="row justify-content-center">
+                        <div class="col-xl-6">
+                            <div class="text-center text-white">
+                                <!-- Page heading-->
+                                <h1 class="mb-5">Bienvenidos a la web!</h1>
                             
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </header>
+            </header>
+        {% endblock 'header_block' %}
 
         {% block 'body_block' %}
         <h1>Este es el index</h1>
