Se creo consorcio por formulario y se nombraron las pestañas

--- a/edificio/templates/edificio/consorcio.html
+++ b/edificio/templates/edificio/consorcio.html
@@ -1,5 +1,10 @@
 {% extends 'index/index.html' %}
 
+{% block head %}
+<title>Consorcio</title>
+{% endblock head %}
+
+
 
 {% block 'header_block' %}
 {% endblock 'header_block' %}
