--- a/edificio/templates/edificio/propietario.html
+++ b/edificio/templates/edificio/propietario.html
@@ -1,5 +1,8 @@
 {% extends 'index/index.html' %}
 
+{% block head %}
+<title>Propietario</title>
+{% endblock head %}
 
 {% block 'header_block' %}
 {% endblock 'header_block' %}
