--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -6,7 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
+        {% block head %}
         <title>Index</title>
+        {% endblock head %}
+        
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -35,7 +38,7 @@
                         <div class="col-xl-6">
                             <div class="text-center text-white">
                                 <!-- Page heading-->
-                                <h1 class="mb-5">Bienvenidos a la web!</h1>
+                                <h1 class="mb-5">Bienvenidos a la web del consorcio</h1>
                             
                             </div>
                         </div>
